<?xml version="1.0"?>
<package>
  <name>cip104</name>
  <version>0.0.0</version>
  <description>The cip104 package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>csapex</build_depend>
  <build_depend>csapex_vision</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>csapex</run_depend>
  <run_depend>csapex_vision</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
